# quickfire_workflow

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CRITICAL_API_LEAK_REPORT.md  GEMINI_BATCH_TEST_GUIDE.md  GEMINI_BATCH_TEST_README.md  HOTWORD_ENHANCEMENT.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  PROBLEM_SUMMARY.md  README.md  TEST_GEMINI_BATCH_REPORT.md  TODO  api-keys-replace.txt  backup_qwen_artifacts.sh  clean_qwen_artifacts.sh  common_plan.md  demo_hotword_asr.py  gatekeeper_test_results.json  monitor_batches.sh  pyproject.toml  reprocess_all_batches.sh  reprocess_all_qwen_asr.sh  retry_failed_batches.sh  test.http  test_gatekeeper.py  test_gatekeeper_comprehensive.py  test_gemini_batch.py  test_hotword_context.py  test_qwen_omni.py  test_single_student.py  testing_plan.md  update_questionbank_records.py  upload_questionbank_to_nocodb.py
.serena/: project.yml
cost_analysis/: qb_match_cost_analysis.md  token_cost_analysis.xlsx  token_cost_simple.xlsx  token_usage_report_Zoe61330_2025-12-29.md  token_usage_report_Zoe61330_2025-12-29_UPDATED.md  成本明细表优化记录.md  成本计算更新_汇率6.98.md  成本计算最终版_汇率6.98.md
data/: 2_intermediate_asr_raw.json  CLAUDE.md  R1-65(1).csv  caption_result.txt  qb.csv
docs/: 20260302-asr-context-email-issues.json  20260302-asr-context-issue-result.json  20260302-asr-context-issue.json  API_快速使用指南.md  API_整合总结.md  API_调用流程说明.md  AUDIO_PIPELINE_PLAN.md  CODEBASE_ANALYSIS_REPORT.md  CONFIG_UPDATE_API.md  Qwen_asr_toolkit.md  asr_context_analysis.md  asr_context_comparison_beta.md  asr_context_comparison_dana.md  asr_context_comparison_nemo.md  (+44 more)
(+1580 files in other folders)
